# pose-deploy-gate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: config.md  requirements.md  roadmap.md
docs/examples/: config.full.yaml  config.minimal.yaml
src/pose_deploy_gate/: __init__.py  __main__.py  cli.py
src/pose_deploy_gate/config/: __init__.py  exceptions.py  loader.py  models.py  validators.py
tests/: test_smoke.py
tests/fixtures/config/: empty.yaml  minimal_valid.yaml  missing_input_dir.yaml  top_level_list.yaml
tests/fixtures/config/invalid/: empty.yaml  invalid_device.yaml  malformed.yaml  missing_required_fields.yaml  unknown_key.yaml
tests/unit/config/: test_exceptions.py  test_invalid_configs.py  test_loader.py  test_models.py  test_validation.py  test_validators.py
